@@ -25,6 +25,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #10806, issue #9905: Fix subprocess pipes when some of the standard
+  file descriptors (0, 1, 2) are closed in the parent process.  Initial
+  patch by Ross Lagerwall.
+
 - Issue #4662: os.tempnam(), os.tmpfile() and os.tmpnam() now raise a py3k
   DeprecationWarning.
 
